# rmf_site

./: Cargo.toml
crates/rmf_site_assets/: Cargo.toml  README.md
crates/rmf_site_camera/: Cargo.toml
crates/rmf_site_camera/examples/: camera_test.rs
crates/rmf_site_camera/src/: components.rs  lib.rs  plugins.rs  resources.rs  systems.rs
crates/rmf_site_camera/src/cursor/: mod.rs
crates/rmf_site_camera/src/keyboard/: mod.rs
crates/rmf_site_camera/src/utils/: mod.rs
crates/rmf_site_editor/: Cargo.toml
crates/rmf_site_editor/examples/: extending_menu.rs
crates/rmf_site_editor/src/: exit_confirmation.rs  keyboard.rs  occupancy.rs  wireframe.rs
crates/rmf_site_editor/src/interaction/: assets.rs  cursor.rs  gizmo.rs  mod.rs  outline.rs  picking.rs  select.rs
crates/rmf_site_editor/src/site/: georeference.rs  site.rs  view_menu.rs
crates/rmf_site_editor/src/site/drawing_editor/: mod.rs
crates/rmf_site_editor/src/widgets/: building_preview.rs  diagnostics.rs  fuel_asset_browser.rs  header_panel.rs  mod.rs  panel_of_tiles.rs  properties_panel.rs  sdf_export_menu.rs  user_camera_display.rs  view_groups.rs  view_layers.rs  view_levels.rs  view_lights.rs  view_model_instances.rs  view_nav_graphs.rs  view_occupancy.rs  view_scenarios.rs  view_tasks.rs  workspace.rs
crates/rmf_site_editor/src/widgets/inspector/: mod.rs
crates/rmf_site_format/: Cargo.toml  test.sdf
crates/rmf_site_format/src/: lift.rs  misc.rs
crates/rmf_site_picking/: Cargo.toml
crates/rmf_site_picking/examples/: picking_example.rs
crates/rmf_site_picking/src/: lib.rs  plugins.rs
crates/rmf_site_picking/src/category_visibility/: mod.rs
crates/rmf_site_picking/src/picking/: mod.rs
crates/rmf_site_picking/src/select/: mod.rs
crates/rmf_site_picking/src/visual_cue/: mod.rs
crates/rmf_site_ui/: Cargo.toml  README.md
crates/rmf_site_ui/examples/: ui_example.rs
crates/rmf_site_ui/src/: lib.rs  plugins.rs  traits.rs
crates/rmf_site_ui/src/header_panel/: mod.rs
crates/rmf_site_ui/src/menu_bar/: mod.rs
crates/rmf_site_ui/src/panel/: mod.rs
crates/rmf_site_ui/src/panel_of_tiles/: mod.rs
crates/rmf_site_ui/src/properties_panel/: mod.rs
(+4 files in other folders)
