[package]
name = "rmf_site_picking"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_egui = {workspace = true}
bevy_ecs = {workspace = true}
bevy_app = {workspace = true}
smallvec = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
bevy = {workspace = true, features = ["dynamic_linking"]}
bevy-inspector-egui = "*"