[package]
name = "rmf_site_picking"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = {workspace = true}
bevy_app = {workspace = true}
smallvec = {workspace = true}
tracing = {workspace = true}
anyhow = {workspace = true}
bevy_input = {workspace = true}
bevy_derive = {workspace = true}
bevy_transform = {workspace = true}
bevy_picking = {workspace = true}
bitfield = {workspace = true}
bevy_render = {workspace = true}

[dev-dependencies]
bevy = {workspace = true, features = ["dynamic_linking"]}
bevy-inspector-egui = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_impulse = { workspace = true}
bevy_egui = {workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_impulse = { workspace = true, features = ["single_threaded_async"]}
# (rydb) no turning of default features post port due to workspace complaining. Will need to see what needs to be fixed after pulling that off.
bevy_egui = { workspace = true, features = ["open_url", "default_fonts", "render"] }
